--- a/SpriteWalkthough/de.lproj/Localizable.strings
+++ b/SpriteWalkthough/de.lproj/Localizable.strings
@@ -49,7 +49,7 @@
 "Increases rate of fire for the Machine Gun" = "Erhöht die Schussfrequenz des Maschinengewehrs";
 
 /* No comment provided by engineer. */
-"Increases the size of Photon Cannon Beams" = "Erhöht die Strahlengröße der Photonenkanone";
+"Increases the size of Laser Cannon Beams" = "Erhöht die Strahlengröße der Laserkanone";
 
 /* No comment provided by engineer. */
 "More Bullets" = "Mehr Munition";
