--- a/SpriteWalkthough/es.lproj/Localizable.strings
+++ b/SpriteWalkthough/es.lproj/Localizable.strings
@@ -49,7 +49,7 @@
 "Increases rate of fire for the Machine Gun" = "Aumenta la velocidad de disparo de la ametralladora";
 
 /* No comment provided by engineer. */
-"Increases the size of Photon Cannon Beams" = "Aumenta el tamaño de los haces del cañón de fotones";
+"Increases the size of Laser Cannon Beams" = "Aumenta el tamaño de los haces del cañón de láser";
 
 /* No comment provided by engineer. */
 "More Bullets" = "Más balas";
