--- a/SpriteWalkthough/ja.lproj/Localizable.strings
+++ b/SpriteWalkthough/ja.lproj/Localizable.strings
@@ -49,7 +49,7 @@
 "Increases rate of fire for the Machine Gun" = "マシンガンの発射速度アップ";
 
 /* No comment provided by engineer. */
-"Increases the size of Photon Cannon Beams" = "フォトンキャノンビームのサイズ増";
+"Increases the size of Laser Cannon Beams" = "フォトンキャノンビームのサイズ増";
 
 /* No comment provided by engineer. */
 "More Bullets" = "弾丸増加";
