--- a/SpriteWalkthough/zh-Hans.lproj/Localizable.strings
+++ b/SpriteWalkthough/zh-Hans.lproj/Localizable.strings
@@ -49,7 +49,7 @@
 "Increases rate of fire for the Machine Gun" = "增加机枪射击速率";
 
 /* No comment provided by engineer. */
-"Increases the size of Photon Cannon Beams" = "增加激光炮光束尺寸";
+"Increases the size of Laser Cannon Beams" = "增加激光炮光束尺寸";
 
 /* No comment provided by engineer. */
 "More Bullets" = "更多子弹";
