--- a/SpriteWalkthough/de.lproj/Localizable.strings
+++ b/SpriteWalkthough/de.lproj/Localizable.strings
@@ -82,7 +82,7 @@
 "Two Weapons" = "Zwei Waffen";
 
 /* No comment provided by engineer. */
-"Unavailable" = "Nicht verfügbar";
+"Unavailable" = "App Store Nicht verfügbar";
 
 /* No comment provided by engineer. */
 "Unlock Now" = "Freischalten";
