--- a/SpriteWalkthough/es.lproj/Localizable.strings
+++ b/SpriteWalkthough/es.lproj/Localizable.strings
@@ -82,7 +82,7 @@
 "Two Weapons" = "Dos armas";
 
 /* No comment provided by engineer. */
-"Unavailable" = "No disponible";
+"Unavailable" = "App Store No disponible";
 
 /* No comment provided by engineer. */
 "Unlock Now" = "Desbloquear ahora";
