--- a/SpriteWalkthough/zh-Hans.lproj/Localizable.strings
+++ b/SpriteWalkthough/zh-Hans.lproj/Localizable.strings
@@ -83,7 +83,7 @@
 "Two Weapons" = "两个武器";
 
 /* No comment provided by engineer. */
-"Unavailable" = "不可用";
+"Unavailable" = "App Store 不可用";
 
 /* No comment provided by engineer. */
 "Unlock Now" = "立即解锁";
