--- a/SpriteWalkthough/ja.lproj/Localizable.strings
+++ b/SpriteWalkthough/ja.lproj/Localizable.strings
@@ -82,7 +82,7 @@
 "Two Weapons" = "2種類の武器";
 
 /* No comment provided by engineer. */
-"Unavailable" = "利用不可";
+"Unavailable" = "App Store 利用不可";
 
 /* No comment provided by engineer. */
 "Unlock Now" = "今すぐアンロック";
