launch image fix

--- a/ja.lproj/InfoPlist.strings
+++ b/ja.lproj/InfoPlist.strings
@@ -7,5 +7,5 @@
 */
 
 //app name
-"CFBundleDisplayName" = "Space Attack";
+"CFBundleDisplayName" = "宇宙攻撃";
 "UILaunchStoryboardName" = "LaunchScreen_japanese";
