error checking & additional app icons

--- a/SpriteWalkthough/de.lproj/Localizable.strings
+++ b/SpriteWalkthough/de.lproj/Localizable.strings
@@ -41,6 +41,7 @@
 "You are not signed into Game Center" = "Sie sind nicht angemeldet in Game Center";
 "Sign In" = "Anmelden";
 
+"Error" = "Fehler";
 
 
 
