--- a/SpriteWalkthough/es.lproj/Localizable.strings
+++ b/SpriteWalkthough/es.lproj/Localizable.strings
@@ -41,6 +41,7 @@
 "You are not signed into Game Center" = "No está inscrito en Game Center";
 "Sign In" = "Registrarse";
 
+"Error" = "Error";
 
 
 /* No comment provided by engineer. */
