--- a/SpriteWalkthough/de.lproj/Localizable.strings
+++ b/SpriteWalkthough/de.lproj/Localizable.strings
@@ -115,7 +115,7 @@
 "Two Weapons" = "Zwei Waffen";
 
 /* No comment provided by engineer. */
-"Unavailable" = "App Store Nicht verfügbar";
+"App Store Unavailable" = "App Store Nicht verfügbar";
 
 /* No comment provided by engineer. */
 "Unlock Now" = "Freischalten";
