--- a/SpriteWalkthough/es.lproj/Localizable.strings
+++ b/SpriteWalkthough/es.lproj/Localizable.strings
@@ -114,7 +114,7 @@
 "Two Weapons" = "Dos armas";
 
 /* No comment provided by engineer. */
-"Unavailable" = "App Store No disponible";
+"App Store Unavailable" = "App Store No disponible";
 
 /* No comment provided by engineer. */
 "Unlock Now" = "Desbloquear ahora";
