--- a/SpriteWalkthough/ja.lproj/Localizable.strings
+++ b/SpriteWalkthough/ja.lproj/Localizable.strings
@@ -116,7 +116,7 @@
 "Two Weapons" = "2種類の武器";
 
 /* No comment provided by engineer. */
-"Unavailable" = "App Store 利用不可";
+"App Store Unavailable" = "App Store 利用不可";
 
 /* No comment provided by engineer. */
 "Unlock Now" = "今すぐアンロック";
