--- a/SpriteWalkthough/zh-Hans.lproj/Localizable.strings
+++ b/SpriteWalkthough/zh-Hans.lproj/Localizable.strings
@@ -116,7 +116,7 @@
 "Two Weapons" = "两个武器";
 
 /* No comment provided by engineer. */
-"Unavailable" = "App Store 不可用";
+"App Store Unavailable" = "App Store 不可用";
 
 /* No comment provided by engineer. */
 "Unlock Now" = "立即解锁";
