finish customized achievement banner

--- a/SpriteWalkthough/Base.lproj/Localizable.strings
+++ b/SpriteWalkthough/Base.lproj/Localizable.strings
@@ -63,6 +63,9 @@
 "purchasedGascogneDescription" = "Gatun";
 "purchasedHabsburgDescription" = "Hasley";
 
+//achievement banner
+"Achievement Earned!" = "Achievement Earned!";
+
 /* No comment provided by engineer. */
 "Available Points" = "Available Points";
 
