--- a/SpriteWalkthough/de.lproj/Localizable.strings
+++ b/SpriteWalkthough/de.lproj/Localizable.strings
@@ -93,6 +93,9 @@
 "purchasedGascogneDescription" = "Gadebusch";
 "purchasedHabsburgDescription" = "H\U00e4her";
 
+//achievement banner
+"Achievement Earned!" = "Leistung Verdient!";
+
 
 
 
