--- a/SpriteWalkthough/es.lproj/Localizable.strings
+++ b/SpriteWalkthough/es.lproj/Localizable.strings
@@ -92,6 +92,13 @@
 "purchasedGascogneDescription" = "De la Vega";
 "purchasedHabsburgDescription" = "Romero";
 
+//achievement banner
+"Achievement Earned!" = "Logro Obtenido!";
+
+
+
+
+
 /* No comment provided by engineer. */
 "Available Points" = "Puntos disponibles";
 
