--- a/SpriteWalkthough/ja.lproj/Localizable.strings
+++ b/SpriteWalkthough/ja.lproj/Localizable.strings
@@ -92,6 +92,9 @@
 "purchasedGascogneDescription" = "\U9577\U9580";
 "purchasedHabsburgDescription" = "\U5927\U548c";
 
+//achievement banner
+"Achievement Earned!" = "成果獲得！";
+
 
 
 /* No comment provided by engineer. */
