reset tutorials and random stuffs

--- a/SpriteWalkthough/Base.lproj/Localizable.strings
+++ b/SpriteWalkthough/Base.lproj/Localizable.strings
@@ -66,6 +66,11 @@
 //achievement banner
 "Achievement Earned!" = "Achievement Earned!";
 
+//settings
+"Tutorial Reset!" = "Tutorial Reset!";
+
+
+
 /* No comment provided by engineer. */
 "Available Points" = "Available Points";
 
