--- a/SpriteWalkthough/es.lproj/Main.strings
+++ b/SpriteWalkthough/es.lproj/Main.strings
@@ -45,6 +45,8 @@
 "H2D-hB-Sdw.text" = "Controles";
 //help
 "wMI-5d-o5G.normalTitle" = "Ayuda";
+//reset tutorial
+"Lc4-J5-7kD.normalTitle" = "Tutorial de Reposición";
 
 //---end game screen
 //restart
