--- a/SpriteWalkthough/ja.lproj/Localizable.strings
+++ b/SpriteWalkthough/ja.lproj/Localizable.strings
@@ -95,6 +95,9 @@
 //achievement banner
 "Achievement Earned!" = "成果獲得！";
 
+//settings
+"Tutorial Reset!" = "チュートリアルリセット！";
+
 
 
 /* No comment provided by engineer. */
