--- a/SpriteWalkthough/zh-Hans.lproj/Localizable.strings
+++ b/SpriteWalkthough/zh-Hans.lproj/Localizable.strings
@@ -95,6 +95,9 @@
 //achievement banner
 "Achievement Earned!" = "成就获得！";
 
+//settings
+"Tutorial Reset!" = "教程复位！";
+
 
 
 /* No comment provided by engineer. */
