--- a/SpriteWalkthough/zh-Hans.lproj/Main.strings
+++ b/SpriteWalkthough/zh-Hans.lproj/Main.strings
@@ -44,6 +44,8 @@
 "H2D-hB-Sdw.text" = "控制";
 //help
 "wMI-5d-o5G.normalTitle" = "帮帮我";
+//reset tutorial
+"Lc4-J5-7kD.normalTitle" = "复位教程";
 
 //---end game screen
 //restart
