localization title is too long for cell

--- a/SpriteWalkthough/es.lproj/Localizable.strings
+++ b/SpriteWalkthough/es.lproj/Localizable.strings
@@ -115,7 +115,7 @@
 "Disable Tips" = "Desactivar consejos";
 
 /* No comment provided by engineer. */
-"Electricity Chain" = "Cadena de electricidad";
+"Electricity Chain" = "Electricidad";
 
 /* No comment provided by engineer. */
 "Energy Booster" = "Potenciador";
