new personal best & adjust vertical tilt

--- a/SpriteWalkthough/es.lproj/Main.strings
+++ b/SpriteWalkthough/es.lproj/Main.strings
@@ -57,6 +57,8 @@
 "Nun-yr-B4d" = "Actualizaciones";
 //home
 "QFI-At-1xJ" = "Menú Principal";
+//personal best
+"mfv-cM-BxY" = "Nuevo Personal Best!";
 
 
 
