--- a/SpriteWalkthough/de.lproj/Main.strings
+++ b/SpriteWalkthough/de.lproj/Main.strings
@@ -56,6 +56,8 @@
 "Nun-yr-B4d" = "Aktualisierung";
 //home
 "QFI-At-1xJ" = "Hauptmenü";
+//personal best
+"mfv-cM-BxY" = "Neue Persönliche Highscore!";
 
 
 
